# Record_Visualize_ROS_topics

./: .gitignore  Dockerfile  README.md  bashrc  entrypoint.sh
catkin_ws/src/my_rosbag_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/my_rosbag_pkg/bagfiles/2024_05_03_20_24_33/: _2024-05-03-20-24-33.bag
catkin_ws/src/my_rosbag_pkg/bagfiles/2024_05_03_20_24_33/_2024-05-03-20-24-33/: Joint_States.csv  Roboter_Pose.csv  Twist.csv
catkin_ws/src/my_rosbag_pkg/bagfiles/2024_05_03_20_38_06/: _2024-05-03-20-38-06.bag
catkin_ws/src/my_rosbag_pkg/bagfiles/2024_05_03_20_38_06/_2024-05-03-20-38-06/: Roboter_Pose.csv  Twist.csv
catkin_ws/src/my_rosbag_pkg/launch/: log_topics.launch
catkin_ws/src/my_rosbag_pkg/scripts/: fake_publisher.py  global_.py  log_topics.py  plot_topics.py
