<?xml version="1.0"?>
<package format="2">
  <name>my_rosbag_pkg</name>
  <version>0.0.0</version>
  <description>The my_rosbag_pkg package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="khoi@todo.todo">khoi</maintainer>

  <maintainer email="khoi@todo.todo">khoi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosbag</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>bagpy</build_depend>
  <build_depend>pandas</build_depend>
  <build_depend>matplotlib</build_depend>
  <build_depend>numpy</build_depend>
  <build_export_depend>numpy</build_export_depend>
  <build_export_depend>matplotlib</build_export_depend>
  <build_export_depend>pandas</build_export_depend>
  <build_export_depend>bagpy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rosbag</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
